apps/httpbun/deployment.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: httpbun
spec:
  type: ClusterIP
  selector:
    app: httpbun
  ports:
    - name: http
      protocol: TCP
      port: 8080

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpbun
spec:
  replicas: 1
  selector:
    matchLabels:
      app: httpbun
  template:
    metadata:
      labels:
        app: httpbun
    spec:
      containers:
        - name: httpbun
          image: "docker.io/sharat87/httpbun:latest"
          resources:
            requests:
              memory: 5Mi
          livenessProbe:
            httpGet:
              scheme: HTTP
              port: 8080
              path: /get
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
      securityContext:
        runAsNonRoot: true
        runAsUser: 223012
        runAsGroup: 223012
        seccompProfile:
          type: RuntimeDefault
